--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "delivery": "0.0.6",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
