--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
+    "randomstring": "^1.1.5",
     "socket.io": "^2.3.0"
   }
 }
