--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.3.1",
     "delivery": "0.0.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
     "randomstring": "^1.1.5",
